# agent.nvim

./: .gitattributes  .gitignore  ARCHITECTURE_REFACTORING_ANALYSIS.md  Cargo.toml  Dockerfile  INSTALL.md  Makefile  README.md  SETUP.md  build.bat  build.sh  docker-compose.yml  example-linux-config.lua  lazy-plugin-config.lua
.github/workflows/: release.yml
.kiro/specs/nvim-spec-agent/: design.md  requirements.md  tasks.md
.kiro/steering/: development-workflow.md
artifacts/nvim-spec-agent-linux-arm64/: nvim-spec-agent-linux-arm64
autoload/health/: agent.vim
container/: Cargo.toml  requirements.txt
container/config/: llm_providers.json  mcp_services.json
container/src/: __init__.py  main.py  main.rs
container/src/command/: executor.rs  mod.rs
container/src/communication/: grpc.rs  handler.rs  mod.rs  protocol.rs
container/src/config/: mod.rs
container/src/file_ops/: mod.rs  monitor.rs
container/src/llm/: anthropic.rs  manager.rs  mod.rs  ollama.rs  openai.rs
container/src/mcp/: client.rs  engine.rs  mod.rs  protocol.rs
container/src/orchestration/: __init__.py  llm_manager.py
container/src/spec/: design.rs  engine.rs  mod.rs  requirements.rs  tasks.rs
container/src/utils/: error_handling.rs  mod.rs
controller/: Cargo.toml
controller/src/: main.rs
controller/src/agent/: command_integration.rs  command_workflow.rs  file_operations.rs
controller/src/communication/: handler.rs  mod.rs  types.rs
controller/src/config/: manager.rs  persistence.rs  settings.rs
controller/src/container/: config.rs  manager.rs  mod.rs
controller/src/examples/: command_approval_demo.rs  mod.rs
controller/src/spec/: requirements.rs  tasks.rs  tests.rs
controller/src/ui/: command_approval_ui.rs  layout.rs
controller/src/utils/: error_handling.rs  mod.rs  neovim_api.rs
lua/agent/: init.lua
lua/agent/communication/: grpc_client.lua  init.lua  protocol.lua
lua/agent/context/: init.lua  provider.lua
lua/agent/ui/: init.lua  windows.lua
lua/nvim-spec-agent/: init.lua
plugin/: agent.vim
proto/: agent_service.proto
scripts/: download-binary.lua
src/: lib.rs  main.rs
src/agent/: chat_manager.rs  command_executor.rs  mod.rs
src/communication/: grpc_client.rs  grpc_server.rs  protocol.rs
src/config/: mod.rs
src/container/: health.rs
src/spec/: design.rs  mod.rs  workflow.rs
src/ui/: mod.rs  visual_blocks.rs  window_manager.rs
