[package]
name = "agent-nvim"
version = "0.1.0"
edition = "2021"
description = "Enhanced Neovim plugin with spec-driven development capabilities"
license = "MIT"
repository = "https://github.com/rykunk21/agent.nvim"

[lib]
name = "agent_nvim"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "nvim-spec-agent"
path = "src/main.rs"

[dependencies]
neovim-lib = "0.6"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
proptest = "1.0"
tokio-test = "0.4"
tempfile = "3.0"

[build-dependencies]