[workspace]
members = ["controller", "container"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rykunk21/agent.nvim"

[workspace.dependencies]
neovim-lib = "0.6"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
tonic = "0.10"
tonic-build = "0.10"
prost = "0.12"
proptest = "1.0"
tokio-test = "0.4"
tempfile = "3.0"
