[package]
name = "agent-nvim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
neovim-lib.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true
tonic.workspace = true
prost.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio-test.workspace = true
tempfile.workspace = true

[[bin]]
name = "agent-nvim"
path = "src/main.rs"
